Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section></section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <section></section
+      <section></section>
 
       <!-- Replace this div with a third section tag -->
       <section>
