Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
     <main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
-      <section></section>
+      <section>
+        <figure></figure>
+        <article></article>
+      </section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <section></section>
+      <section>
+        <figure></figure>
+      </section>
 
       <!-- Replace this div with a third section tag -->
       <section>
