--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <section>
         <figure></figure>
+        <figcaption></figcaption>
         <article></article>
       </section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
       <section>
         <figure></figure>
+        <figcaption></figcaption>
       </section>
 
       <!-- Replace this div with a third section tag -->
