Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <section>
-        <figure></figure>
-        <figcaption></figcaption>
+        <figure>
+          <figcaption></figcaption>
+        </figure>
         <article></article>
       </section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
       <section>
-        <figure></figure>
-        <figcaption></figcaption>
+        <figure>
+          <figcaption></figcaption>
+        </figure>
       </section>
 
       <!-- Replace this div with a third section tag -->
